--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </form>
       </section>
 
-      <section class="data">
+      <section class="js-list">
         <ul class="list">
           <li class="card">
             <article>
