--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section class="data">
         <ul class="list">
-          <li class="card">
+          <li class="card" class="js_siames">
             <article>
               <img
                 class="card_img"
