--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
       <section class="search">
         <h2 class="title">Filtrar / Buscar</h2>
         <form class="form">
-          <input class="input js_in_search_desc" type="text" placeholder="Descripción" />
+          <input class="js_in_search_desc" type="text" placeholder="Descripción"/>
           <input
-            class="input"
+            class="input js-search-race"
             type="select"
             name="raza"
             placeholder="Raza"
             id="raza"
           />
 
-          <button class="button">Buscar</button>
+          <button class="button js-button-search">Buscar</button>
         </form>
       </section>
 
